--- a/src/main/resources/group/primary.fxml
+++ b/src/main/resources/group/primary.fxml
@@ -10,11 +10,14 @@
       <Label text="Primary View" />
       <Button mnemonicParsing="false" onAction="#printFormats" text="Formats" />
       <Button fx:id="dirButton" mnemonicParsing="false" onAction="#openDirDialog" text="Dir" />
+      <TextField fx:id="pathShower" editable="false" />
       <Button fx:id="testButton" mnemonicParsing="false" onAction="#doSomething" text="Print" />
       <Button fx:id="primaryButton" onAction="#switchToSecondary" text="Switch to Secondary View" />
       <Button mnemonicParsing="false" onMouseClicked="#ConnectToDB" text="ConnectToDB" />
       <Button mnemonicParsing="false" onMousePressed="#InsertImage" text="Insert Image" />
       <Button mnemonicParsing="false" onMousePressed="#showImage" text="ShowImage From DB" />
+      <Button mnemonicParsing="false" onAction="#uploadImages" text="Another placeholder" />
+      <ProgressBar fx:id="progressBar" prefWidth="200.0" progress="0.0" />
       <ImageView fx:id="imageView" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
       <TextArea fx:id="textFieldTest" prefHeight="200.0" prefWidth="200.0" />
    </children>
