--- a/src/main/resources/group/testLayout.fxml
+++ b/src/main/resources/group/testLayout.fxml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="group.TestController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group.TestController">
+   <children>
+      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#addSlider" text="Button" />
+      <FlowPane fx:id="flowPane" layoutX="300.0" layoutY="27.0" prefHeight="325.0" prefWidth="182.0" />
+      <Slider fx:id="fixedSlider" layoutX="14.0" layoutY="111.0" onMouseClicked="#onMouseDragged" onMouseDragged="#onMouseDragged" />
+   </children>
 </AnchorPane>
