--- a/src/main/resources/group/secondary.fxml
+++ b/src/main/resources/group/secondary.fxml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group.SecondaryController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group.SecondaryController">
    <children>
-      <Button fx:id="secondaryButton" layoutX="14.0" layoutY="24.0" onAction="#switchToPrimary" text="Przejdz do dodawania danych" />
+      <Button layoutX="14.0" layoutY="24.0" onAction="#switchToPrimary" text="Przejdz do dodawania danych" />
+      <Button layoutX="476.0" layoutY="36.0" mnemonicParsing="false" onAction="#openDirDialog" text="Dodaj folder docelowy" />
       <Button layoutX="111.0" layoutY="265.0" mnemonicParsing="false" text="Training set" />
       <Button layoutX="111.0" layoutY="321.0" mnemonicParsing="false" text="Validation set" />
       <Button layoutX="111.0" layoutY="380.0" mnemonicParsing="false" text="Test set" />
       <ImageView fitHeight="175.0" fitWidth="200.0" layoutX="440.0" layoutY="246.0" pickOnBounds="true" preserveRatio="true" />
-      <Button layoutX="569.0" layoutY="446.0" mnemonicParsing="false" text="Zapisz" />
+      <Button fx:id="downloadButton" disable="true" layoutX="527.0" layoutY="105.0" mnemonicParsing="false" onMousePressed="#testFunction" text="Pobierz" />
       <ListView layoutX="240.0" layoutY="17.0" prefHeight="200.0" prefWidth="200.0" />
    </children>
 </Pane>
