--- a/src/main/resources/group/primary.fxml
+++ b/src/main/resources/group/primary.fxml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
-
 <?import javafx.scene.image.*?>
-
 <?import javafx.scene.layout.*?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group.PrimaryController">
@@ -12,7 +10,7 @@
       <Button fx:id="dirButton" layoutX="259.0" layoutY="127.0" mnemonicParsing="false" onAction="#openDirDialog" text="Dodaj folder" />
       <Button fx:id="testButton" layoutX="41.0" layoutY="299.0" mnemonicParsing="false" onAction="#doSomething" text="Print" />
       <Button layoutX="41.0" layoutY="337.0" mnemonicParsing="false" onAction="#printFormats" text="Formats" />
-      <Button layoutX="275.0" layoutY="216.0" mnemonicParsing="false" text="Zapisz" />
+      <Button fx:id="saveButton" layoutX="275.0" layoutY="216.0" mnemonicParsing="false" onAction="#uploadImages" text="Zapisz" />
 
       <Button layoutX="499.0" layoutY="27.0" mnemonicParsing="false" onAction="#goToTest" text="testLayout" />
 
@@ -22,5 +20,6 @@
             <TextArea fx:id="textFieldTest" layoutX="-2.0" layoutY="-5.0" prefHeight="130.0" prefWidth="137.0" visible="false" />
          </children>
       </AnchorPane>
+      <ProgressBar fx:id="progressBar" layoutX="201.0" layoutY="180.0" prefWidth="200.0" progress="0.0" />
    </children>
 </Pane>
