--- a/src/main/resources/group/secondary.fxml
+++ b/src/main/resources/group/secondary.fxml
@@ -8,12 +8,12 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group.SecondaryController">
    <children>
-      <Button fx:id="secondaryButton" layoutX="14.0" layoutY="24.0" onAction="#switchToPrimary" text="Przejdz do dodawania danych" />
+      <Button fx:id="secondaryButton" layoutX="14.0" layoutY="24.0" onAction="#switchToPrimary" text="Przejdz do importowania danych" />
       <Button layoutX="111.0" layoutY="265.0" mnemonicParsing="false" text="Training set" />
       <Button layoutX="111.0" layoutY="321.0" mnemonicParsing="false" text="Validation set" />
       <Button layoutX="111.0" layoutY="380.0" mnemonicParsing="false" text="Test set" />
       <ImageView fitHeight="175.0" fitWidth="200.0" layoutX="440.0" layoutY="246.0" pickOnBounds="true" preserveRatio="true" />
-      <Button layoutX="569.0" layoutY="446.0" mnemonicParsing="false" text="Zapisz" />
+      <Button layoutX="569.0" layoutY="446.0" mnemonicParsing="false" text="Eksportuj" />
       <ListView layoutX="240.0" layoutY="17.0" prefHeight="200.0" prefWidth="200.0" />
    </children>
 </Pane>
