combobox, tagRow class, getAllTags method, exampleImage load after selecting a tag

--- a/src/main/resources/group/secondary.fxml
+++ b/src/main/resources/group/secondary.fxml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group.SecondaryController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group.SecondaryController">
    <children>
       <Button layoutX="14.0" layoutY="24.0" onAction="#switchToPrimary" text="Przejdz do dodawania danych" />
       <Button layoutX="476.0" layoutY="36.0" mnemonicParsing="false" onAction="#openDirDialog" text="Dodaj folder docelowy" />
-      <Button layoutX="111.0" layoutY="265.0" mnemonicParsing="false" text="Training set" />
-      <Button layoutX="111.0" layoutY="321.0" mnemonicParsing="false" text="Validation set" />
-      <Button layoutX="111.0" layoutY="380.0" mnemonicParsing="false" text="Test set" />
+      <Button layoutX="310.0" layoutY="334.0" mnemonicParsing="false" text="Training set" />
+      <Button layoutX="306.0" layoutY="380.0" mnemonicParsing="false" text="Validation set" />
+      <Button layoutX="320.0" layoutY="430.0" mnemonicParsing="false" text="Test set" />
       <ImageView fitHeight="175.0" fitWidth="200.0" layoutX="440.0" layoutY="246.0" pickOnBounds="true" preserveRatio="true" />
-      <Button fx:id="downloadButton" disable="true" layoutX="527.0" layoutY="105.0" mnemonicParsing="false" onMousePressed="#testFunction" text="Pobierz" />
-      <ListView layoutX="240.0" layoutY="17.0" prefHeight="200.0" prefWidth="200.0" />
+      <Button fx:id="downloadButton" disable="true" layoutX="584.0" layoutY="80.0" mnemonicParsing="false" onMousePressed="#testFunction" text="Pobierz" />
+      <ComboBox fx:id="tagsComboBox" layoutX="63.0" layoutY="80.0" prefHeight="25.0" prefWidth="174.0" />
+      <TextField fx:id="numberOfImagesTextField" layoutX="54.0" layoutY="130.0" prefHeight="25.0" prefWidth="227.0" text="Ilość obrazków z wybranym tagiem: " />
+      <ImageView fx:id="exampleImageView" fitHeight="150.0" fitWidth="200.0" layoutX="340.0" layoutY="93.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </Pane>
