--- a/src/main/resources/group/secondary.fxml
+++ b/src/main/resources/group/secondary.fxml
@@ -11,9 +11,9 @@
    <children>
       <Button layoutX="14.0" layoutY="24.0" onAction="#switchToPrimary" text="Przejdz do dodawania danych" />
       <Button layoutX="476.0" layoutY="36.0" mnemonicParsing="false" onAction="#openDirDialog" text="Dodaj folder docelowy" />
-      <Button layoutX="337.0" layoutY="301.0" mnemonicParsing="false" text="Training set" />
-      <Button layoutX="319.0" layoutY="362.0" mnemonicParsing="false" text="Validation set" />
-      <Button layoutX="320.0" layoutY="430.0" mnemonicParsing="false" text="Test set" />
+      <Button layoutX="35.0" layoutY="418.0" mnemonicParsing="false" text="Training set" />
+      <Button layoutX="193.0" layoutY="417.0" mnemonicParsing="false" text="Validation set" />
+      <Button layoutX="340.0" layoutY="406.0" mnemonicParsing="false" text="Test set" />
       <Button fx:id="downloadButton" disable="true" layoutX="584.0" layoutY="80.0" mnemonicParsing="false" onMousePressed="#testFunction" text="Pobierz" />
       <ComboBox fx:id="tagsComboBox" layoutX="63.0" layoutY="80.0" prefHeight="25.0" prefWidth="174.0" />
       <ImageView fx:id="exampleImageView" fitHeight="150.0" fitWidth="200.0" layoutX="340.0" layoutY="130.0" pickOnBounds="true" preserveRatio="true" />
@@ -27,5 +27,6 @@
       <TextField fx:id="numberOfImagesValidationSetTF" layoutX="237.0" layoutY="288.0" prefHeight="25.0" prefWidth="48.0" text="0" />
       <Text layoutX="35.0" layoutY="354.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ilość obrazków dla test setu" wrappingWidth="152.47540283203136" />
       <TextField fx:id="numberOfImagesTestSetTF" layoutX="237.0" layoutY="337.0" prefHeight="25.0" prefWidth="48.0" text="0" />
+      <Text fx:id="errorText" fill="#fa0000" layoutX="28.0" layoutY="392.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="303.19995880126953" />
    </children>
 </Pane>
