--- a/src/main/resources/group/secondary.fxml
+++ b/src/main/resources/group/secondary.fxml
@@ -10,11 +10,10 @@
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group.SecondaryController">
    <children>
       <Button layoutX="14.0" layoutY="24.0" onAction="#switchToPrimary" text="Przejdz do dodawania danych" />
-      <Button layoutX="476.0" layoutY="36.0" mnemonicParsing="false" onAction="#openDirDialog" text="Dodaj folder docelowy" />
-      <Button layoutX="35.0" layoutY="418.0" mnemonicParsing="false" text="Training set" />
-      <Button layoutX="193.0" layoutY="417.0" mnemonicParsing="false" text="Validation set" />
-      <Button layoutX="340.0" layoutY="406.0" mnemonicParsing="false" text="Test set" />
-      <Button fx:id="downloadButton" disable="true" layoutX="584.0" layoutY="80.0" mnemonicParsing="false" onMousePressed="#testFunction" text="Pobierz" />
+      <Button layoutX="35.0" layoutY="418.0" mnemonicParsing="false" onAction="#openTrainingDirDialog" text="Training set" />
+      <Button layoutX="193.0" layoutY="417.0" mnemonicParsing="false" onAction="#openValidationDirDialog" text="Validation set" />
+      <Button layoutX="340.0" layoutY="406.0" mnemonicParsing="false" onAction="#openTestDirDialog" text="Test set" />
+      <Button fx:id="downloadButton" layoutX="499.0" layoutY="417.0" mnemonicParsing="false" onMousePressed="#exportImages" text="Eksportuj" />
       <ComboBox fx:id="tagsComboBox" layoutX="63.0" layoutY="80.0" prefHeight="25.0" prefWidth="174.0" />
       <ImageView fx:id="exampleImageView" fitHeight="150.0" fitWidth="200.0" layoutX="380.0" layoutY="146.0" pickOnBounds="true" preserveRatio="true" />
       <Text layoutX="380.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Przykładowy obrazek" wrappingWidth="119.375" />
