--- a/src/main/resources/group/secondary.fxml
+++ b/src/main/resources/group/secondary.fxml
@@ -2,37 +2,41 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group.SecondaryController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="755.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group.SecondaryController">
    <children>
       <Button layoutX="14.0" layoutY="24.0" onAction="#switchToPrimary" text="Przejdz do importowania danych" />
-      <Button layoutX="305.0" layoutY="238.0" mnemonicParsing="false" onAction="#openTrainingDirDialog" text="Training set" />
-      <Button layoutX="305.0" layoutY="288.0" mnemonicParsing="false" onAction="#openValidationDirDialog" text="Validation set" />
-      <Button layoutX="305.0" layoutY="337.0" mnemonicParsing="false" onAction="#openTestDirDialog" text="Test set" />
-      <Button fx:id="exportButton" disable="true" layoutX="488.0" layoutY="430.0" mnemonicParsing="false" onMousePressed="#exportImages" text="Eksportuj" />
-      <ComboBox fx:id="tagsComboBox" layoutX="63.0" layoutY="80.0" prefHeight="25.0" prefWidth="174.0" />
-      <ImageView fx:id="exampleImageView" fitHeight="150.0" fitWidth="200.0" layoutX="431.0" layoutY="64.0" pickOnBounds="true" preserveRatio="true" />
+      <Button layoutX="382.0" layoutY="233.0" mnemonicParsing="false" onAction="#openTrainingDirDialog" text="Training set" />
+      <Button layoutX="377.0" layoutY="279.0" mnemonicParsing="false" onAction="#openValidationDirDialog" text="Validation set" />
+      <Button layoutX="393.0" layoutY="329.0" mnemonicParsing="false" onAction="#openTestDirDialog" text="Test set" />
+      <Button fx:id="exportButton" disable="true" layoutX="598.0" layoutY="523.0" mnemonicParsing="false" onMousePressed="#exportImages" text="Eksportuj" />
+      <ComboBox fx:id="tagsComboBox" layoutX="51.0" layoutY="80.0" prefHeight="25.0" prefWidth="174.0" />
+      <ImageView fx:id="exampleImageView" fitHeight="150.0" fitWidth="200.0" layoutX="431.0" layoutY="68.0" pickOnBounds="true" preserveRatio="true" />
       <Text layoutX="471.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Przykładowy obrazek" wrappingWidth="119.375" />
-      <Text fx:id="numberOfImagesText" layoutX="63.0" layoutY="143.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ilość obrazków z wybranym tagiem: " />
-      <TextField fx:id="maxNumberOfImagesTF" layoutX="237.0" layoutY="189.0" prefHeight="25.0" prefWidth="48.0" text="0" />
-      <Text layoutX="35.0" layoutY="206.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Maksymalna ilość obrazków" wrappingWidth="152.47540283203125" />
-      <Text layoutX="35.0" layoutY="251.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ilość obrazków dla training setu" wrappingWidth="167.60003662109386" />
-      <TextField fx:id="numberOfImagesTrainingSetTF" layoutX="237.0" layoutY="234.0" prefHeight="25.0" prefWidth="48.0" text="0" />
-      <Text layoutX="35.0" layoutY="305.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ilość obrazków dla validation setu" wrappingWidth="183.1855468750001" />
-      <TextField fx:id="numberOfImagesValidationSetTF" layoutX="237.0" layoutY="288.0" prefHeight="25.0" prefWidth="48.0" text="0" />
-      <Text layoutX="35.0" layoutY="354.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ilość obrazków dla test setu" wrappingWidth="152.47540283203136" />
-      <TextField fx:id="numberOfImagesTestSetTF" layoutX="237.0" layoutY="337.0" prefHeight="25.0" prefWidth="48.0" text="0" />
-      <Text fx:id="errorText" fill="#fa0000" layoutX="51.0" layoutY="416.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="303.19995880126953" />
-      <Button fx:id="leftArrow" layoutX="392.0" layoutY="118.0" mnemonicParsing="false" onAction="#onLeftArrowClick" text="&lt;-" />
-      <Button fx:id="rightArrow" layoutX="644.0" layoutY="118.0" mnemonicParsing="false" onAction="#onRightArrowClick" text="-&gt;" />
-      <Text fx:id="trainingSetPathText" layoutX="400.0" layoutY="258.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="261.3365783691406" />
-      <Text fx:id="validationSetPathText" layoutX="400.0" layoutY="305.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="273.3366394042969" />
-      <Text fx:id="testSetPathText" layoutX="400.0" layoutY="354.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="273.3366394042969" />
-      <ProgressBar fx:id="progressBar" layoutX="421.0" layoutY="394.0" prefWidth="200.0" progress="0.0" />
+      <Text fx:id="numberOfImagesText" layoutX="32.0" layoutY="337.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ilość obrazków z wybranymi tagami: " />
+      <TextField fx:id="maxNumberOfImagesTF" layoutX="218.0" layoutY="366.0" prefHeight="25.0" prefWidth="48.0" text="0" />
+      <Text layoutX="32.0" layoutY="383.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Maksymalna ilość obrazków" wrappingWidth="152.47540283203125" />
+      <Text layoutX="24.0" layoutY="431.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ilość obrazków dla training setu" wrappingWidth="167.60003662109386" />
+      <TextField fx:id="numberOfImagesTrainingSetTF" layoutX="218.0" layoutY="414.0" prefHeight="25.0" prefWidth="48.0" text="0" />
+      <Text layoutX="19.0" layoutY="486.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ilość obrazków dla validation setu" wrappingWidth="183.1855468750001" />
+      <TextField fx:id="numberOfImagesValidationSetTF" layoutX="218.0" layoutY="469.0" prefHeight="25.0" prefWidth="48.0" text="0" />
+      <Text layoutX="32.0" layoutY="540.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ilość obrazków dla test setu" wrappingWidth="152.47540283203136" />
+      <TextField fx:id="numberOfImagesTestSetTF" layoutX="218.0" layoutY="523.0" prefHeight="25.0" prefWidth="48.0" text="0" />
+      <Text fx:id="errorText" fill="#fa0000" layoutX="66.0" layoutY="568.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="303.19995880126953" />
+      <Button fx:id="leftArrow" disable="true" layoutX="392.0" layoutY="118.0" mnemonicParsing="false" onAction="#onLeftArrowClick" text="&lt;-" />
+      <Button fx:id="rightArrow" disable="true" layoutX="644.0" layoutY="118.0" mnemonicParsing="false" onAction="#onRightArrowClick" text="-&gt;" />
+      <Text fx:id="trainingSetPathText" layoutX="490.0" layoutY="250.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="245.33657836914062" />
+      <Text fx:id="validationSetPathText" layoutX="490.0" layoutY="296.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="252.33663940429688" />
+      <Text fx:id="testSetPathText" layoutX="490.0" layoutY="346.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="239.33657836914062" />
+      <ProgressBar fx:id="progressBar" layoutX="471.0" layoutY="473.0" prefWidth="200.0" progress="0.0" />
+      <ListView fx:id="tagsListView" layoutX="35.0" layoutY="119.0" prefHeight="191.0" prefWidth="200.0" />
+      <Button layoutX="258.0" layoutY="80.0" mnemonicParsing="false" onAction="#addTag" text="Dodaj tag" />
+      <Button layoutX="265.0" layoutY="190.0" mnemonicParsing="false" onMousePressed="#removeTagFromList" text="Usuń tag" />
    </children>
 </Pane>
