--- a/src/main/resources/group/settings.fxml
+++ b/src/main/resources/group/settings.fxml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group.SettingsController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="755.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group.SettingsController">
    <children>
-      <TextField fx:id="connectionString" layoutX="209.0" layoutY="62.0" />
-      <TextField fx:id="username" layoutX="209.0" layoutY="106.0" />
-      <PasswordField fx:id="password" accessibleRole="TEXT" layoutX="209.0" layoutY="153.0" />
-      <Label layoutX="35.0" layoutY="67.0" text="Adres serwera MariaDB" />
-      <Label layoutX="34.0" layoutY="111.0" text="Nazwa użytkownika" />
-      <Label layoutX="34.0" layoutY="158.0" text="Hasło" />
-      <Button layoutX="329.0" layoutY="214.0" mnemonicParsing="false" onMousePressed="#save" text="Zapisz" />
-      <Button layoutX="232.0" layoutY="214.0" mnemonicParsing="false" onMousePressed="#switchToPrimary" text="Anuluj" />
+      <TextField fx:id="connectionString" layoutX="352.0" layoutY="117.0" />
+      <TextField fx:id="username" layoutX="352.0" layoutY="178.0" />
+      <PasswordField fx:id="password" accessibleRole="TEXT" layoutX="352.0" layoutY="243.0" />
+      <Label layoutX="181.0" layoutY="121.0" text="Adres serwera MariaDB" />
+      <Label layoutX="191.0" layoutY="182.0" text="Nazwa użytkownika" />
+      <Label layoutX="228.0" layoutY="247.0" text="Hasło" />
+      <Button layoutX="451.0" layoutY="321.0" mnemonicParsing="false" onMousePressed="#save" text="Zapisz" />
+      <Button layoutX="369.0" layoutY="321.0" mnemonicParsing="false" onMousePressed="#switchToPrimary" text="Anuluj" />
       <Button layoutX="35.0" layoutY="23.0" mnemonicParsing="false" onMousePressed="#switchToPrimary" text="Cofnij do strony głównej" />
-      <Button layoutX="40.0" layoutY="275.0" mnemonicParsing="false" onMousePressed="#CheckConnectionToDB" text="Test połączenia z bazą" />
+      <Button layoutX="35.0" layoutY="429.0" mnemonicParsing="false" onMousePressed="#CheckConnectionToDB" text="Test połączenia z bazą" />
       <Label fx:id="status" layoutX="232.0" layoutY="280.0" text="Text" visible="false" />
-      <Button layoutX="40.0" layoutY="314.0" mnemonicParsing="false" onMouseClicked="#PrepareDB" text="Przygotowanie bazy" />
-      <Label layoutX="232.0" layoutY="317.0" text="Ta opcja nadpisze schemat MachineLearning (o ile istnieje on w bazie)" />
+      <Button layoutX="41.0" layoutY="486.0" mnemonicParsing="false" onMouseClicked="#PrepareDB" text="Przygotowanie bazy" />
+      <Label layoutX="209.0" layoutY="490.0" text="Ta opcja nadpisze schemat MachineLearning (o ile istnieje on w bazie)" />
    </children>
 </Pane>
