--- a/src/main/resources/group/settings.fxml
+++ b/src/main/resources/group/settings.fxml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="755.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group.SettingsController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="755.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group.SettingsController">
    <children>
       <TextField fx:id="connectionString" layoutX="352.0" layoutY="117.0" />
       <TextField fx:id="username" layoutX="352.0" layoutY="178.0" />
@@ -18,7 +15,7 @@
       <Button layoutX="369.0" layoutY="321.0" mnemonicParsing="false" onMousePressed="#switchToPrimary" text="Anuluj" />
       <Button layoutX="35.0" layoutY="23.0" mnemonicParsing="false" onMousePressed="#switchToPrimary" text="Cofnij do strony głównej" />
       <Button layoutX="35.0" layoutY="429.0" mnemonicParsing="false" onMousePressed="#CheckConnectionToDB" text="Test połączenia z bazą" />
-      <Label fx:id="status" layoutX="232.0" layoutY="280.0" text="Text" visible="false" />
+      <Label fx:id="status" layoutX="218.0" layoutY="433.0" text="Text" visible="false" />
       <Button layoutX="41.0" layoutY="486.0" mnemonicParsing="false" onMouseClicked="#PrepareDB" text="Przygotowanie bazy" />
       <Label layoutX="209.0" layoutY="490.0" text="Ta opcja nadpisze schemat MachineLearning (o ile istnieje on w bazie)" />
    </children>
